--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <!-- <link rel="manifest" href="/site.webmanifest"> -->
 </head>
 
 <body>
@@ -22,18 +23,19 @@
             <div class="text-part__main-info">
                 <p class="text-part__main-info__element">
                     я начал карьеру с топ-3 студии России –
-                    <a class="text-part__link" href="https://www.pinkman.ru/"><u>PINKMAN</u></a> , где
+                    <a class="text-part__link" href="https://www.pinkman.ru/" target="_blank">PINKMAN</a> , где
                     делал разные проекты для
-                    <a class="text-part__link" href="https://www.rshb.ru/"><u>РСХБ</u></a>
-                    ,&nbsp;
-                    <a class="text-part__link" href="https://www.vtb.ru/"><u>ВТБ</u></a>
-                    ,&nbsp;
-                    <a class="text-part__link" href="https://www.rgs.ru/ "><u>Росгосстраха</u></a>
+                    <nobr>
+                        <a class="text-part__link" href="https://www.rshb.ru/" target="_blank">РСХБ</a>,
+                        <a class="text-part__link" href="https://www.vtb.ru/" target="_blank">ВТБ</a>,
+                        <a class="text-part__link" href="https://www.rgs.ru/" target="_blank">Росгосстраха</a>
+                    </nobr>
+
                 </p>
 
                 <p class="text-part__main-info__element">
                     потом я ушёл в <del>sbercloud</del>
-                    <a class="text-part__link" href="https://cloud.ru/ru"><u>Cloud.ru</u></a>
+                    <a class="text-part__link" href="https://cloud.ru/ru" target="_blank">Cloud.ru</a>
                     здесь я успел позаниматься сайтом и&nbsp;очень разными интерфейсами
                 </p>
 
@@ -44,14 +46,16 @@
 
                 <div class="text-part__main-info__element">
                     <span>еще я веду</span>
-                    <a class="button-blue" href="https://t.me/designtwist">канал в телеграм &#8594;</a>
+                    <a class="button-blue" href="https://t.me/designtwist" target="_blank">канал в телеграм &#8594;</a>
 
                     <span>, преподаю в</span>
-                    <a class="button-black" href="https://obe.ru/teacher/odokienko-andrej-aleksandrovich/">инсититуте
+                    <a class="button-black" href="https://obe.ru/teacher/odokienko-andrej-aleksandrovich/"
+                        target="_blank">инсититуте
                         B&D &#8594;</a>
 
                     <span>и пишу</span>
-                    <a class="button-pink" href="https://vc.ru/u/528995-andrey-odokienko">статьи на vc.ru &#8594;</a>
+                    <a class="button-pink" href="https://vc.ru/u/528995-andrey-odokienko" target="_blank">статьи на
+                        vc.ru &#8594;</a>
                 </div>
 
                 <p class="text-part__main-info__element">
@@ -62,7 +66,7 @@
                     <p>можете написать мне:</p>
                     <div class="text-part__main-info__footer-text">
                         <span>в телеграм &#8594;</span>
-                        <a href="https://t.me/odokienkoan">@odokienkoan</a>
+                        <a href="https://t.me/odokienkoan" target="_blank">@odokienkoan</a>
                     </div>
                     <div class="text-part__main-info__footer-text">
                         <span>или на почту &#8594;</span>
