add missing links

--- a/src/index.html
+++ b/src/index.html
@@ -68,11 +68,11 @@
                     <p>можете написать мне:</p>
                     <div class="text-part__main-info__footer-text">
                         <span>в телеграм &#8594;</span>
-                        <a href="https://t.me/odokienkoan" target="_blank">@odokienkoan</a>
+                        <a class="text-part__link" href="https://t.me/odokienkoan" target="_blank">@odokienkoan</a>
                     </div>
                     <div class="text-part__main-info__footer-text">
                         <span>или на почту &#8594;</span>
-                        <a href="mailto:odokienkoan@gmail.com">odokienkoan@gmail.com</a>
+                        <a class="text-part__link" href="mailto:odokienkoan@gmail.com">odokienkoan@gmail.com</a>
                     </div>
                 </div>
             </div>
