fix font and style issues

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 
                 <p class="text-part__main-info__element">
                     потом я ушёл в <del>sbercloud</del>
-                    <a class="text-part__link" href="https://cloud.ru/ru" target="_blank">Cloud.ru</a>
+                    <a class="text-part__link" href="https://cloud.ru/ru" target="_blank">Cloud.ru</a> <br>
                     здесь я успел позаниматься сайтом и&nbsp;очень разными интерфейсами
                 </p>
 
