fix bem and text underline

--- a/src/index.html
+++ b/src/index.html
@@ -13,40 +13,39 @@
 <body>
     <div class="main-page-wrap">
 
-        <div class="text-part">
-            <div class="text-part__header">
-                <h1 class="text-part__header__name">Андрей Одокиенко</h1>
-                <div class="text-part__header__position">
-                    <p class="text-part__header__position__first-line">product design lead</p>
-                    <p class="text-part__header__position__second-line">в cloud.ru</p>
+        <div class="text">
+            <div class="text__header">
+                <h1 class="text__header__name">Андрей Одокиенко</h1>
+                <div class="text__header__position">
+                    <p class="text__header__position__first-line">product design lead</p>
+                    <p class="text__header__position__second-line">в cloud.ru</p>
                 </div>
             </div>
 
-            <div class="text-part__main-info">
-                <p class="text-part__main-info__element">
-                    я начал карьеру с топ-3 студии России –
-                    <a class="text-part__link" href="https://www.pinkman.ru/" target="_blank">PINKMAN</a> , где
+            <div class="text__main-info">
+                <div>
+                    <span>я начал карьеру с топ-3 студии России –</span>
+                    <a class="text__link" href="https://www.pinkman.ru/" target="_blank">PINKMAN</a> , где
                     делал разные проекты для
                     <nobr>
-                        <a class="text-part__link" href="https://www.rshb.ru/" target="_blank">РСХБ</a>,
-                        <a class="text-part__link" href="https://www.vtb.ru/" target="_blank">ВТБ</a>,
-                        <a class="text-part__link" href="https://www.rgs.ru/" target="_blank">Росгосстраха</a>
+                        <a class="text__link" href="https://www.rshb.ru/" target="_blank">РСХБ</a>,
+                        <a class="text__link" href="https://www.vtb.ru/" target="_blank">ВТБ</a>,
+                        <a class="text__link" href="https://www.rgs.ru/" target="_blank">Росгосстраха</a>
                     </nobr>
+                </div>
 
-                </p>
-
-                <p class="text-part__main-info__element">
+                <p>
                     потом я ушёл в <del>sbercloud</del>
-                    <a class="text-part__link" href="https://cloud.ru/ru" target="_blank">Cloud.ru</a> <br>
+                    <a class="text__link" href="https://cloud.ru/ru" target="_blank">Cloud.ru</a> <br>
                     здесь я успел позаниматься сайтом и&nbsp;очень разными интерфейсами
                 </p>
 
-                <p class="text-part__main-info__element">
+                <p>
                     лучше всего у меня получается строить команды, процессы и продукты,
                     и&nbsp;помогать дизайнерам расти
                 </p>
 
-                <div class="text-part__main-info__element">
+                <div>
                     <span>еще я веду</span>
                     <a class="button-blue" href="https://t.me/designtwist" target="_blank">канал в телеграм &#8594;</a>
 
@@ -60,27 +59,25 @@
                         vc.ru &#8594;</a>
                 </div>
 
-                <p class="text-part__main-info__element">
-                    сейчас я не ищу работу, но всегда рад интересным знакомствам
-                </p>
+                <p> сейчас я не ищу работу, но всегда рад интересным знакомствам</p>
 
-                <div class="text-part__main-info__element">
+                <div>
                     <p>можете написать мне:</p>
-                    <div class="text-part__main-info__footer-text">
+                    <div class="text__main-info__footer">
                         <span>в телеграм &#8594;</span>
-                        <a class="text-part__link" href="https://t.me/odokienkoan" target="_blank">@odokienkoan</a>
+                        <a class="text__link" href="https://t.me/odokienkoan" target="_blank">@odokienkoan</a>
                     </div>
-                    <div class="text-part__main-info__footer-text">
+                    <div class="text__main-info__footer">
                         <span>или на почту &#8594;</span>
-                        <a class="text-part__link" href="mailto:odokienkoan@gmail.com">odokienkoan@gmail.com</a>
+                        <a class="text__link" href="mailto:odokienkoan@gmail.com">odokienkoan@gmail.com</a>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="image-part">
-            <div class="image-part__portrait">
-                <div class="image-part__portrait__sign"></div>
+        <div class="image">
+            <div class="image__portrait">
+                <div class="image__portrait__sign"></div>
             </div>
         </div>
 
